Fixed spacing

--- a/public/CSS/pingpong.css
+++ b/public/CSS/pingpong.css
@@ -27,6 +27,8 @@ body#pong{
 	background-color: #4B669B;
 	border: 3px solid white;
 	text-align: center;
+	margin: 10px;
+	margin-top: 20px;
 }
 h1, h2 {
 	margin: 10px;
